fix flash of light theme when clicking links in dark mode

--- a/themes/geekboot/assets/scss/color-modes.scss
+++ b/themes/geekboot/assets/scss/color-modes.scss
@@ -49,13 +49,6 @@
 
 
 body{
-  --duration: 0.5s;
-  --timing: ease;
-
   background: var(--body-background);
   color: var(--body-font-color);
-
-  transition: color var(--duration) var(--timing), background-color var(
-      --duration
-  ) var(--timing);
 }
